--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
 }
 
 test {
