--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,6 @@ repositories {
 }
 
 dependencies {
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
-}
-
-test {
-    useJUnitPlatform()
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
