--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group 'spd.trello'
@@ -15,4 +16,16 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.3.1'
     implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.2.0'
     implementation 'com.zaxxer:HikariCP:5.0.0'
+    testImplementation("com.h2database:h2:1.4.200")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.0")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+}
+
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
 }
