--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,12 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.3.1'
     implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.2.0'
     implementation 'com.zaxxer:HikariCP:5.0.0'
-    testImplementation("com.h2database:h2:1.4.200")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.0")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
-    implementation("org.springframework:spring-core:5.3.14")
-    implementation("org.springframework:spring-context:5.3.14")
+    testImplementation 'com.h2database:h2:1.4.200'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    implementation 'org.springframework:spring-core:5.3.14'
+    implementation 'org.springframework:spring-context:5.3.14'
+    implementation 'org.springframework:spring-webmvc:5.3.14'
 }
 
 test {
