--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id 'war'
 }
 
 group 'spd.trello'
@@ -22,6 +23,7 @@ dependencies {
     implementation 'org.springframework:spring-core:5.3.14'
     implementation 'org.springframework:spring-context:5.3.14'
     implementation 'org.springframework:spring-webmvc:5.3.14'
+    implementation 'org.springframework:spring-jdbc:5.3.14'
 }
 
 test {
