--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,34 @@
 plugins {
+    id 'org.springframework.boot' version '2.6.3'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'jacoco'
-    id 'war'
 }
 
 group 'spd.trello'
 version '1.0-SNAPSHOT'
+sourceCompatibility = '11'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compileOnly 'org.projectlombok:lombok:1.18.22'
-    annotationProcessor 'org.projectlombok:lombok:1.18.22'
-    implementation 'org.postgresql:postgresql:42.3.1'
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.2.0'
     implementation 'com.zaxxer:HikariCP:5.0.0'
-    testImplementation 'com.h2database:h2:1.4.200'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    implementation 'org.springframework:spring-core:5.3.14'
-    implementation 'org.springframework:spring-context:5.3.14'
-    implementation 'org.springframework:spring-webmvc:5.3.14'
     implementation 'org.springframework:spring-jdbc:5.3.14'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.flywaydb:flyway-core'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'org.postgresql:postgresql'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
