--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,12 @@ dependencies {
     implementation 'com.zaxxer:HikariCP:5.0.0'
     implementation 'org.springframework:spring-jdbc:5.3.14'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
     implementation 'org.flywaydb:flyway-core'
     implementation 'com.h2database:h2:1.4.200'
+    implementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
