--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,23 +1,25 @@
 spring:
   application:
     name: Java
+
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/postgres
-#    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_UPPER=false
-    password: admin
-    #    password: postgres
-    username: postgres
     hikari:
       maximum-pool-size: 50
+#    type: com.zaxxer.hikari.HikariDataSource
+#    url: jdbc:postgresql://localhost:5432/postgres
+#    password: admin
+    username: postgres
+    password: postgres
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_UPPER=false
+    driver-class-name: org.h2.Driver
+
   flyway:
     enabled: true
     validate-on-migrate: true
-  #  jpa:
-#    show-sql: true
-#    open-in-view: false
-#    properties:
-#      hibernate.format_sql: true
+
+  jpa:
+    open-in-view: true
+
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -26,6 +28,3 @@ server:
   error:
     include-message: always
     include-exception: true
-
-#application:
-#  pagination-feature: true
