--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,11 @@ dependencies {
     implementation 'junit:junit:4.13.1'
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.4'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.6.6'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
