--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'ch.qos.logback:logback-core:1.2.11'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.11'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
 }
 
 test {
